# vgf-adapter-model-explorer

./: .gitignore  README.md  cliff.toml  dependencies.xml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/build-wheel/: action.yml
.github/workflows/: check.yml  ci.yml  pr-internal-checks.yml  trigger-release.yml
.qlty/: qlty.toml
scripts/: README.md  generate-mlir-bin-sbom.py  replace_symlinks_in_llvm_python_package.py  update_tosa_operand_info.py
src/vgf_adapter_model_explorer/: constants.py  generic.py
src/vgf_adapter_model_explorer/builder/: builder.py  utils.py
src/vgf_adapter_model_explorer/exec/: mlir_translate.py  utils.py  vgf_dump.py
src/vgf_adapter_model_explorer/parser/: parser.py
src/vgf_adapter_model_explorer/spirv/: spirv.py  spirv_node_builder.py
src/vgf_adapter_model_explorer/tests/: test_model_explorer_cli.py
src/vgf_adapter_model_explorer/tests/fixtures/mobilenet_v2/: expected.json  input.vgf
src/vgf_adapter_model_explorer/tests/fixtures/vww4/: expected.json  input.vgf
